@@ -1,3 +1,8 @@
+2008-02-18  Daniel Burrows  <dburrows@debian.org>  (tiny change)
+
+	* haskell-indent.el (haskell-indent-next-symbol-safe): New fun.
+	(haskell-indent-separate-valdef): Use it.
+
 2008-02-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* inf-haskell.el (inferior-haskell-cabal-of-buf): Fix typo.
